--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>Produits_liste</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)='logOut()'>
+        <ion-icon name='log-out'></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
