--- a/src/pages/a-propos/a-propos.html
+++ b/src/pages/a-propos/a-propos.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>A_propos</ion-title>
+    <ion-title>À propos</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)='logOut()'>
         <ion-icon name='log-out'></ion-icon>
