--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Produits_liste</ion-title>
+    <ion-title>Produits</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)='logOut()'>
         <ion-icon name='log-out'></ion-icon>
