--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -19,5 +19,26 @@
 
 
 <ion-content padding>
-<article>test</article>
+  <ion-card>
+    <img src="img/nin-live.png"/>
+    <ion-card-content>
+      <ion-card-title>
+        Acai bowl Chia
+      </ion-card-title>
+      <p>
+        The most popular industrial group ever, and largely
+        responsible for bringing the music to a mass audience.
+      </p>
+      <ion-item style="padding: 0px">
+        <button class="customiser" ion-button icon-left>
+          Customiser
+          <ion-icon></ion-icon>
+        </button>
+        <button class="ajouter" ion-button item-right="" >
+          <ion-icon></ion-icon>
+          Ajouter | CHF 3.95
+        </button>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
