--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -29,7 +29,7 @@
         The most popular industrial group ever, and largely
         responsible for bringing the music to a mass audience.
       </p>
-      <ion-item style="padding: 0px">
+      <ion-item style="padding: 0">
         <button class="customiser" ion-button icon-left>
           Customiser
           <ion-icon></ion-icon>
