--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -14,5 +14,54 @@
 
 
 <ion-content padding>
+  <form #registerForm="ngForm">
+    <ion-row>
+      <ion-col>
+        <ion-list inset>
 
+          <ion-item>
+            <ion-input type="text" placeholder="Prénom" name="firstname" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="text" placeholder="Nom" name="lastname" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="text" placeholder="Adresse" name="adress" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+          <ion-input type="text" placeholder="NPA" name="npa" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="text" placeholder="Ville" name="city" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="text" placeholder="Email" name="email" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="password" placeholder="Mot de passe" name="password" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-input type="password" placeholder="Confirmez votre mot de passe" name="confirmation_password" required></ion-input>
+          </ion-item>
+
+        </ion-list>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-footer>
+          <ion-col class="signup-col">
+            <button ion-button class="submit-btn" full type="submit">S'INSCRIRE</button>
+          </ion-col>
+      </ion-footer>
+    </ion-row>
+
+  </form>
 </ion-content>
