--- a/src/pages/a-propos/a-propos.html
+++ b/src/pages/a-propos/a-propos.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>À propos</ion-title>
+    <ion-title></ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)='logOut()'>
         <ion-icon name='log-out'></ion-icon>
@@ -19,5 +19,17 @@
 
 
 <ion-content padding>
+  <div class="about-header">
+    <img class="logo" src="../../assets/imgs/acai.png" alt="açaiGo logo">
+  </div>
+  <div padding class="about-info">
+    <h4></h4>
 
+    <p>
+      The Ionic Conference is a one-day conference featuring talks from the Ionic team. It is focused on Ionic applications being
+      built with Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2, Angular concepts, Webpack, Sass, and many
+      other technologies used in Ionic 2. Tickets are completely sold out, and we’re expecting more than 1000 developers
+      – making this the largest Ionic conference ever!
+    </p>
+  </div>
 </ion-content>
