--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -24,6 +24,7 @@
     <ion-card-content>
       <ion-card-title>
         Acai bowl Chia
+        <button class="details" (click)='seeDetails()'>Détails</button>
       </ion-card-title>
       <p>
         The most popular industrial group ever, and largely
