--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -36,13 +36,13 @@
     </ion-row>
     <ion-row>
       <ion-item>
-        <ion-label fixed>Mot de passe:</ion-label>
+        <ion-label>Mot de passe:</ion-label>
         <ion-input></ion-input>
       </ion-item>
     </ion-row>
     <ion-row>
       <ion-item>
-        <ion-label fixed>Moyen de paiement:</ion-label>
+        <ion-label>Moyen de paiement:</ion-label>
         <ion-input></ion-input>
       </ion-item>
     </ion-row>
