html product details

--- a/src/pages/produits-details/produits-details.html
+++ b/src/pages/produits-details/produits-details.html
@@ -7,12 +7,45 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Produits_details</ion-title>
+    <ion-title>Détails</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h3 text-center>Açai bowl chia</h3>
+  <div text-center>
+    <img class="bowl" src="../../assets/imgs/acai_bowl.png"/>
+  </div>
+  <ion-list>
+    <ion-title>Ingrédients</ion-title>
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="">
+      </ion-avatar>
+      <p>flocons d'avoine</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="col-button" col-6>
+        <ion-buttons>
+          <button class="customiser" ion-button solid>
+            Customiser
+          </button>
+        </ion-buttons>
+      </ion-col>
+      <ion-col class="col-button" col-6>
+        <ion-buttons>
+          <button class="ajouter" ion-button solid>
+            Ajouter | CHF 3.95
+          </button>
+        </ion-buttons>
+      </ion-col>
+    </ion-row>
+
+  </ion-toolbar>
+</ion-footer>
