update product list

--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -33,14 +33,14 @@
       </p>
         <ion-row>
           <ion-col class="col-button" col-6>
-            <ion-buttons>
+            <ion-buttons start>
               <button class="customiser" ion-button>
                 Customiser
               </button>
             </ion-buttons>
           </ion-col>
           <ion-col class="col-button" col-6>
-            <ion-buttons>
+            <ion-buttons end>
               <button class="ajouter" ion-button>
                 Ajouter | CHF 3.95
               </button>
