add prod + ingredient + liste prod....

--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -26,23 +26,22 @@
       <ion-card-title>
         Acai bowl Chia
       </ion-card-title>
-      <a class="details button" (click)='seeDetails()'>Ingrédients</a>
+      <!--<a class="details button" (click)='seeDetails()'>Ingrédients</a>-->
       <p>
-        The most popular industrial group ever, and largely
-        responsible for bringing the music to a mass audience.
+        CHF 3.95
       </p>
         <ion-row>
           <ion-col class="col-button" col-6>
             <ion-buttons start>
-              <button class="customiser" ion-button>
-                Customiser
+              <button class="details" ion-button>
+                Détials
               </button>
             </ion-buttons>
           </ion-col>
           <ion-col class="col-button" col-6>
             <ion-buttons end>
               <button class="ajouter" ion-button>
-                Ajouter | CHF 3.95
+                Ajouter
               </button>
             </ion-buttons>
           </ion-col>
