--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -22,9 +22,8 @@
   <ion-grid>
     <ion-row class="avatar" justify-content-start>
         <ion-col col-4>
-
             <ng-template [ngIf]="picture" [ngIfElse]="noPictureData">
-                <img src='https://comem-qimg.herokuapp.com/api/images' />
+                <img [src]='picture.url'/>
             </ng-template>
             <ng-template #noPictureData>
                 <img id="profile-image" src="https://image.flaticon.com/icons/svg/3/3711.svg">
