--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -18,17 +18,17 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card>
+  <ion-card *ngFor='let product of products'>
     <div text-center>
       <img class="bowl" src="../../assets/imgs/acai_bowl.png"/>
     </div>
     <ion-card-content>
       <ion-card-title>
-        Acai bowl Chia
+        {{product.name}}
       </ion-card-title>
       <!--<a class="details button" (click)='seeDetails()'>Ingrédients</a>-->
       <p>
-        CHF 3.95
+        {{product.price}} CHF
       </p>
         <ion-row>
           <ion-col class="col-button" col-6>
