--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -58,7 +58,7 @@
     <ion-row>
       <ion-footer>
           <ion-col class="signup-col">
-            <button ion-button class="submit-btn" full type="submit">S'INSCRIRE</button>
+            <button ion-button class="submit-btn" (click)='addUser()' full type="submit">S'INSCRIRE</button>
           </ion-col>
       </ion-footer>
     </ion-row>
