--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -14,43 +14,38 @@
 
 
 <ion-content padding>
-  <form #registerForm="ngForm" (submit)='displayFirstName()'>
+  <form (ngSubmit)='logForm()'>
     <ion-row>
       <ion-col>
         <ion-list inset>
 
           <ion-item>
-            <ion-input type="text" placeholder="Prénom" name="firstname" required></ion-input>
+            <ion-input type="text" placeholder="Prénom" name="firstname" [(ngModel)]='register.firstname' required></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-input type="text" placeholder="Nom" name="lastname" required></ion-input>
+            <ion-input type="text" placeholder="Nom" name="name" [(ngModel)]='register.name' required></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-input type="text" placeholder="Adresse" name="adress" required></ion-input>
+            <ion-input type="text" placeholder="Adresse" name="street" [(ngModel)]='register.address.street' required></ion-input>
           </ion-item>
 
           <ion-item>
-          <ion-input type="text" placeholder="NPA" name="npa" required></ion-input>
+          <ion-input type="text" placeholder="NPA" name="NPA" [(ngModel)]='register.address.NPA' required></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-input type="text" placeholder="Ville" name="city" required></ion-input>
+            <ion-input type="text" placeholder="Ville" name="City" [(ngModel)]='register.address.City'  required></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-input type="text" placeholder="Email" name="email" required></ion-input>
+            <ion-input type="text" placeholder="Email" name="email" [(ngModel)]='register.email'  required></ion-input>
           </ion-item>
 
           <ion-item>
-            <ion-input type="password" placeholder="Mot de passe" name="password" required></ion-input>
+            <ion-input type="password" placeholder="Mot de passe" name="password" [(ngModel)]='register.password'  required></ion-input>
           </ion-item>
-
-          <ion-item>
-            <ion-input type="password" placeholder="Confirmez votre mot de passe" name="confirmation_password" required></ion-input>
-          </ion-item>
-
         </ion-list>
       </ion-col>
     </ion-row>
@@ -58,7 +53,7 @@
     <ion-row>
       <ion-footer>
           <ion-col class="signup-col">
-            <button ion-button class="submit-btn" (click)='addUser()' full type="submit">S'INSCRIRE</button>
+            <button ion-button class="submit-btn" (click)="submitUser()" full type="submit">S'INSCRIRE</button>
           </ion-col>
       </ion-footer>
     </ion-row>
