--- a/src/pages/produits-details/produits-details.html
+++ b/src/pages/produits-details/produits-details.html
@@ -14,17 +14,19 @@
 
 
 <ion-content padding>
-  <h3 text-center>Açai bowl chia</h3>
+  <h3 text-center>{{product?.name}}</h3>
   <div text-center>
     <img class="bowl" src="../../assets/imgs/acai_bowl.png"/>
   </div>
+  <h2 text-center>{{product?.price}} CHF</h2>
   <ion-list>
     <ion-title>Ingrédients</ion-title>
-    <ion-item>
+    <ion-item *ngFor='let ingredient of product?.ingredients'>
       <ion-avatar item-start>
-        <img src="">
+        <ion-icon name="pricetag"></ion-icon>
       </ion-avatar>
-      <p>flocons d'avoine</p>
+      <p>{{ingredient.description}}</p> 
+      <p>{{ingredient.poids}}</p>
     </ion-item>
   </ion-list>
 </ion-content>
@@ -41,7 +43,7 @@
       <ion-col class="col-button" col-6>
         <ion-buttons>
           <button class="ajouter" ion-button solid>
-            Ajouter | CHF 3.95
+            Ajouter | CHF {{product?.price}}
           </button>
         </ion-buttons>
       </ion-col>
