--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,3 +1,14 @@
+<!--<ion-header no-border>
+  <ion-navbar>
+    <ion-buttons right>
+      <button ion-button icon-only>
+        <ion-badge></ion-badge>
+        <ion-icon name="cart"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
+</ion-header>-->
+
 <ion-tabs>
   <ion-tab *ngFor='let tab of tabs'
            [tabTitle]='tab.title' [tabIcon]='tab.icon' [root]='tab.component'>
