--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -7,12 +7,39 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Panier</ion-title>
+    <ion-title> Votre panier</ion-title>
   </ion-navbar>
   
 </ion-header>
 
+  <ion-content padding>
+    <!-- if the cart has no elements -->
+    <div ng-show="cart.items.length === 0">
+      <div></div>
+    </div>
 
-<ion-content padding>
+    <!-- if the cart has some products -->
+    <div ng-hide="cart.items.length === 0">
+      <div class="list">
+        <div class="item item-thumbnail-left" ng-repeat="item in cart.items">
+          <img>
+          <h2>Nom</h2>
+          <h4>prix</h4>
+          <div>
+            <a class="ion ion-plus">1</a>
+            quantité
+            <a class="ion ion-minus">2</a>
+          </div>
+        </div>
+        <div class="item">
+          <div class="padding">
+            <h3>Total: </h3>
+          </div>
+        </div>
+      </div>
+      <div class="padding">
+        <a class="button button-positive button-block"><span class="ion ion-android-done-all"></span> Checkout</a>
+      </div>
+    </div>
+  </ion-content>
 
-</ion-content>
