--- a/src/pages/produits-liste/produits-liste.html
+++ b/src/pages/produits-liste/produits-liste.html
@@ -18,7 +18,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-card *ng-repeat='let product of products'>
+  <ion-card *ngFor='let product of products'>
     <div text-center>
       <img class="bowl" src="../../assets/imgs/acai_bowl.png"/>
     </div>
