--- a/src/pages/commande-retrait/commande-retrait.html
+++ b/src/pages/commande-retrait/commande-retrait.html
@@ -13,6 +13,18 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content class="container" padding>
+      <ul class="progressbar">
+        <li class="active">Retrait</li>
+        <li>Paiement</li>
+        <li>Validation</li>
+        <li>C'est fait!</li>
+      </ul>
+  <ion-list>
+    <p>Veuillez indiquer la date de retrait</p>
+    <ion-item>
+      <ion-label fixed>Date</ion-label>
+      <ion-input type="text" value=""></ion-input>
+    </ion-item>
+  </ion-list>
 </ion-content>
