--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -14,32 +14,31 @@
 
   <ion-content padding>
     <!-- if the cart has no elements -->
-    <div ng-show="cart.items.length === 0">
-      <div></div>
-    </div>
-
     <!-- if the cart has some products -->
-    <div ng-hide="cart.items.length === 0">
-      <div class="list">
-        <div class="item item-thumbnail-left" ng-repeat="item in cart.items">
-          <img>
-          <h2>Nom</h2>
-          <h4>prix</h4>
-          <div>
-            <a class="ion ion-plus">1</a>
-            quantité
-            <a class="ion ion-minus">2</a>
-          </div>
-        </div>
-        <div class="item">
-          <div class="padding">
-            <h3>Total: </h3>
-          </div>
-        </div>
-      </div>
-      <div class="padding">
-        <a class="button button-positive button-block"><span class="ion ion-android-done-all"></span> Checkout</a>
-      </div>
-    </div>
+      <ion-list>
+          <ion-row *ngFor='let product of products'>
+            <ion-thumbnail item-left>
+              <img src="../../assets/imgs/acai_bowl.png">
+            </ion-thumbnail>
+            <h2>{{ product?.name }}</h2><br/>
+            <h4>CHF {{ product?.price }}</h4>
+          </ion-row>
+        <ion-row>
+          <h3>Total:</h3>
+        </ion-row>
+      </ion-list>
   </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col class="col-button" col-12>
+        <ion-buttons>
+          <button class="order" (click)='order()' ion-button solid>
+            Commander
+          </button>
+        </ion-buttons>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
 
