add map + nggeoloc + leaflets

--- a/src/pages/profil/profil.html
+++ b/src/pages/profil/profil.html
@@ -70,7 +70,7 @@
   </ion-list>
   <ion-footer>
     <ion-col>
-      <button ion-button class="submit-btn" full type="submit">Voir toutes les commandes</button>
+      <button ion-button class="submit-btn" full (click)='voirCommandes()'>Voir toutes les commandes</button>
     </ion-col>
   </ion-footer>
 </ion-content>
