--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <meta name="msapplication-tap-highlight" content="no">
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/leaflet/leaflet.js"></script>
+  <script type="text/javascript" src="assets/js/angular-leaflet-directive.min.js"></script>
   <!------ Include the above in your HEAD tag ---------->
+  <link rel="stylesheet" href="assets/leaflet/leaflet.css">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
