--- a/src/pages/commande-retrait/commande-retrait.html
+++ b/src/pages/commande-retrait/commande-retrait.html
@@ -21,20 +21,20 @@
         <li>C'est fait!</li>
       </ul>
   <p>Veuillez indiquer la date de retrait</p>
-  <form>
+  <form (submit)='submitDate()'>
     <ion-list>
       <ion-item>
-        <ion-label fixed>Date</ion-label>
-        <ion-input type="text" value=""></ion-input>
+        <ion-label>Date</ion-label>
+        <ion-datetime display-format="YYYY-MM-DDTHH:mm:ssTZD" picker-format="MM DD YY"></ion-datetime>
       </ion-item>
     </ion-list>
+    <ion-row>
+      <ion-footer>
+        <ion-col>
+          <button ion-button class="submit-btn" full type="submit">CONTINUER</button>
+        </ion-col>
+      </ion-footer>
+    </ion-row>
   </form>
-  <ion-row>
-    <ion-footer>
-      <ion-col>
-        <button (click)="submitDate()" ion-button class="submit-btn" full type="submit">CONTINUER</button>
-      </ion-col>
-    </ion-footer>
-  </ion-row>
 </ion-content>
 
