--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -17,11 +17,15 @@
     <!-- if the cart has some products -->
       <ion-list>
           <ion-row *ngFor='let product of products'>
-            <ion-thumbnail item-left>
-              <img src="../../assets/imgs/acai_bowl.png">
-            </ion-thumbnail>
-            <h2>{{ product?.name }}</h2><br/>
-            <h4>CHF {{ product?.price }}</h4>
+            <ion-col class="image" col-6>
+              <ion-thumbnail class="thumbnail" item-left>
+                <img class="img" src="../../assets/imgs/acai_bowl.png">
+              </ion-thumbnail>
+            </ion-col>
+            <ion-col col-6>
+              <h2>{{ product?.name }}</h2>
+              <h5>Prix: CHF {{ product?.price }}</h5>
+            </ion-col>
           </ion-row>
         <ion-row>
           <h3>Total:</h3>
