geoloc dans commande ok

--- a/src/pages/commande-retrait/commande-retrait.html
+++ b/src/pages/commande-retrait/commande-retrait.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Commande_retrait</ion-title>
+    <ion-title>Date de retrait</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,11 +15,12 @@
 
 <ion-content class="container" padding>
       <ul class="progressbar">
-        <li class="active">Retrait</li>
-        <li>Paiement</li>
-        <li>Validation</li>
-        <li>C'est fait!</li>
-      </ul>
+          <li class="active">Retrait</li>
+          <li>Géoloc</li>
+          <li>Validation</li>
+          <li>C'est fait!</li>
+        </ul>
+     
   <p>Veuillez indiquer la date de retrait</p>
     <ion-list>
       <ion-item>
