--- a/src/pages/commande-validation/commande-validation.html
+++ b/src/pages/commande-validation/commande-validation.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Commande_validation</ion-title>
+    <ion-title>Validation de votre commande</ion-title>
   </ion-navbar>
 
 </ion-header>
