--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -25,6 +25,9 @@
             <ion-col col-6>
               <h2>{{ product?.name }}</h2>
               <h5>Prix: CHF {{ product?.price }}</h5>
+              Quantité:
+              <ion-icon name="remove-circle" (click)="decrement()"></ion-icon>  {{currentNumber}}
+              <ion-icon name="add-circle" (click)="increment()"></ion-icon>
             </ion-col>
           </ion-row>
         <ion-row>
