--- a/src/pages/commande-retrait/commande-retrait.html
+++ b/src/pages/commande-retrait/commande-retrait.html
@@ -13,14 +13,13 @@
 </ion-header>
 
 
-<ion-content class="container" padding>
+<ion-content padding>
       <ul class="progressbar">
           <li class="active">Retrait</li>
           <li>Géoloc</li>
           <li>Validation</li>
           <li>C'est fait!</li>
         </ul>
-     
   <p>Veuillez indiquer la date de retrait</p>
     <ion-list>
       <ion-item>
