order process done

--- a/src/pages/commande-confirmation/commande-confirmation.html
+++ b/src/pages/commande-confirmation/commande-confirmation.html
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Commande_confirmation</ion-title>
+    <ion-title>Confirmation de commande</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding style="text-align:center;">
+    <p class="sucessOrder"> Merci pour votre commande. Elle a bien été enregistrée et sera prête à temps pour la date choisie.</p>
+    <img id="success" src="https://image.flaticon.com/icons/svg/190/190411.svg">
 
 </ion-content>
