--- a/src/pages/commande-geoloc/commande-geoloc.html
+++ b/src/pages/commande-geoloc/commande-geoloc.html
@@ -14,6 +14,12 @@
 
 
 <ion-content padding style="text-align:center;">
+    <ul class="progressbar">
+        <li>Retrait</li>
+        <li class="active">Géoloc</li>
+        <li>Validation</li>
+        <li>C'est fait!</li>
+      </ul>
 <p class="positionMessage"> Nous récupérons votre position pour gélocaliser votre commande.</p>
 <img id="location" src="https://image.flaticon.com/icons/svg/1148/1148202.svg">
 <ion-row>
