--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -16,17 +16,17 @@
     <!-- if the cart has no elements -->
     <!-- if the cart has some products -->
       <ion-list>
-          <ion-row *ngFor='let product of products'>
+          <ion-row *ngFor='let orderline of orderFull.orderLines'>
             <ion-col class="image" col-6>
               <ion-thumbnail class="thumbnail" item-left>
                 <img class="img" src="../../assets/imgs/acai_bowl.png">
               </ion-thumbnail>
             </ion-col>
             <ion-col col-6>
-              <h2>{{ product?.name }}</h2>
-              <h5>Prix: CHF {{ product?.price }}</h5>
+              <h2>{{ orderline?.product.name }}</h2>
+              <h5>Prix: CHF {{ orderline?.product.price }}</h5>
               Quantité:
-              <ion-icon name="remove-circle" (click)="decrement()"></ion-icon>  {{currentNumber}}
+              <ion-icon name="remove-circle" (click)="decrement()"></ion-icon>  {{orderline?.quantity}}
               <ion-icon name="add-circle" (click)="increment()"></ion-icon>
             </ion-col>
           </ion-row>
