--- a/src/pages/a-propos/a-propos.html
+++ b/src/pages/a-propos/a-propos.html
@@ -26,10 +26,7 @@
     <h4></h4>
 
     <p>
-      The Ionic Conference is a one-day conference featuring talks from the Ionic team. It is focused on Ionic applications being
-      built with Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2, Angular concepts, Webpack, Sass, and many
-      other technologies used in Ionic 2. Tickets are completely sold out, and we’re expecting more than 1000 developers
-      – making this the largest Ionic conference ever!
+      The AçaiGo App gives you the quickest, easiest way to place an order for acai bowls and then go to the store to pick them up.
     </p>
   </div>
 </ion-content>
