--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,7 +26,7 @@
 
       <!-- Username input -->
       <ion-item>
-        <ion-label floating>Username</ion-label>
+        <ion-label floating>E-mail</ion-label>
         <ion-input type='text' name='email'
                    #usernameInput='ngModel' [(ngModel)]='authRequest.email' required></ion-input>
       </ion-item>
